# diffuseai

./: .gitignore  COMMIT_MESSAGE.txt  CONTRIBUTING.md  QUICKSTART.md  README.md  dev.sh  install_nvidia_drivers.sh  justfile  pyproject.toml  pytest.ini  setup_comfyui.sh
docs/: COMFYUI_QUICKREF.md  COMFYUI_SETUP.md  JUSTFILE_GUIDE.md  MODELS.md
src/imggen/: __init__.py  config.py
src/imggen/application/: __init__.py  auth.py  gallery.py  generation.py  img2img.py
src/imggen/domain/: __init__.py  crypto.py  entities.py  exceptions.py  models.py  value_objects.py
src/imggen/infrastructure/: session.py
src/imggen/infrastructure/database/: base.py  sqlite.py
src/imggen/infrastructure/gpu/: __init__.py  base.py  cloud.py  comfyui.py
src/imggen/infrastructure/storage/: __init__.py  base.py  local.py
src/imggen/interfaces/: __init__.py
src/imggen/interfaces/cli/: __init__.py  app.py  config.py  gallery.py  generate.py  img2img.py  user.py
tests/: __init__.py
tests/unit/: test_crypto.py  test_entities.py
workflows/: sdxl_base.json
